--- a/Backend/compre/src/main/resources/application.properties
+++ b/Backend/compre/src/main/resources/application.properties
@@ -6,7 +6,7 @@ serpapi.timeout.ms=5000
 # utilizar - create database compre;
 spring.datasource.url=jdbc:mysql://localhost:3306/compre?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
